--- a/texFiles/aug2017.tex
+++ b/texFiles/aug2017.tex
@@ -439,7 +439,45 @@ Here $c$ and $C$ are constants independent of $h$.
 
 \vskip 1cm
 
-\textbf{Solution}: 
+\textbf{Solution by Xin Su}: On the interval $[x_i,x_{i+1}], i=0,1,\cdots N$, $u_h(t,x)$ is a linear function and $u_h^2(t,x)$ is a concave up quadratic function. Hence, 
+
+\begin{equation}
+\label{eq:left}
+\int_{x_i}^{x_{i+1}} u_h^2(t,x)\leq \frac{h}{2}(u_h^2(t,x_i)+u_h^2(t,x_{i+1}))
+\end{equation}
+
+On the other hand, $u_h(t,x)$ on $[x_i,x_{i+1}]$ can be written as $u_h(t,x)=u_h(t,x_{i}) + \frac{1}{h} (u_h(t,x_{i+1})-u_h(t,x_i)) (x-x_i)$.
+
+\begin{equation}\label{eq:right}
+\begin{aligned}
+\int_{x_i}^{x_{i+1}} u_h^2(t,x) dx 
+&= \Big(\frac{(u_h(t,x_{i+1})-u_h(t,x_{i}))^2}{3} + u_h(t,x_{i})u_h(t,x_{i+1})\Big) h \\
+&= \frac{u_h^2(t,x_{i+1})+u_h(t,x_{i})u_h(t,x_{i+1})+u_h^2(t,x_{i})}{3}h \\
+&\geq \frac{u_h^2(t,x_{i+1})-|u_h(t,x_{i})u_h(t,x_{i+1})|+u_h^2(t,x_{i})}{3}h \\ 
+&\geq \frac{u_h^2(t,x_{i+1})+u_h^2(t,x_{i})}{6}h
+\end{aligned}
+\end{equation}
+
+
+Summing up the equation \eqref{eq:left} and \eqref{eq:right} for $i=0,1,\cdots N$, we get 
+
+\begin{equation}
+	\frac{h}{6}(u_h^2(t,x_0)+2\sum_{i=1}^{N}u_h^2(t,x_{i})+ u_h^2(t,x_{N+1}))\leq \int_{0}^{1} u_h^2(t,x)\leq \frac{h}{2}(u_h^2(t,x_0)+2\sum_{i=1}^{N}u_h^2(t,x_{i})+ u_h^2(t,x_{N+1}))
+\end{equation}
+
+By the periodic boundary condition, we have $ u_h^2(t,x_{N+1})= u_h^2(t,x_{0})$. Thus, the desired inequality is proven with $c=3$.
+
+%$$\frac{h}{3}(\sum_{i=0}^{N}u_h^2(t,x_{i}))\leq \int_{0}^{1} u_h^2(t,x)\leq h(\sum_{i=0}^{N}u_h^2(t,x_{i}))$$
+\begin{equation}
+\label{eq:ineq}
+	\frac{1}{3}\int_{0}^{1} u_h^2(t,x ) \: dx \leq h\sum_{i=0}^{N}u_h^2(t,x_{i}) \leq 3\int_{0}^{1} u_h^2(t,x ) \: dx
+\end{equation}
+The above inequality holds for any fixed t>0. Use the inequality \eqref{eq:ineq} and combine the result of (b), we get 
+\begin{equation}
+	\int_{0}^{1} u_h^2(t,x ) \: dx \leq3 h\sum_{i=0}^{N}u_h^2(t,x_{i}) 
+	= 3h\sum_{i=0}^{N}u_h^2(0,x_{i})\leq 9\int_{0}^{1} u_h^2(0,x ) \: dx 
+	= 9\int_0^1 \phi_h^2(x) \: dx.
+\end{equation}
 
 \vskip 2cm
 
